apps/GatewayAPI/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
  namespace: kube-system
spec:
  addresses:
  - type: IPAddress
    value: 172.16.0.1
  gatewayClassName: cilium
  infrastructure:
    labels:
      bgp-pool: "pool-1"
      advertise: "bgp"
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: web-gw
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      bgp-pool: "pool-1"
      advertise: "bgp"
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.camsab.me'
    name: wildcard
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: camsab-me-tls
      mode: Terminate
